<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do12306</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_resultqueryactivity_list">Items</string>
    <string name="title_resultqueryactivity_detail">ResultQueryActivity Detail</string>
    <string name="title_activity_show_query_result">ShowQueryResult</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_ticket_detail">ShowTicketDetail</string>

    <!-- 车票席位 -->

    <string name="ticket_seat_type_wz">无座</string>
    <string name="ticket_seat_type_yz">硬座</string>
    <string name="ticket_seat_type_rz">软座</string>
    <string name="ticket_seat_type_yw">硬卧</string>
    <string name="ticket_seat_type_rw">软卧</string>
    <string name="ticket_seat_type_gw">高卧</string>
    <string name="ticket_seat_type_zy">一等</string>
    <string name="ticket_seat_type_ze">二等</string>
    <string name="ticket_seat_type_zd">特等</string>
    <string name="ticket_seat_type_swz">商务</string>
    <string name="title_activity_select_passenger">SelectPassengerActivity</string>
    <string name="title_activity_submit_order">SubmitOrderActivity</string>

    <!-- ID -->

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_center">UserCenter</string>
    <string name="title_activity_do_ticket">DoTicket</string>
    <string name="title_activity_test_do_query">TestDoQuery</string>
    <string name="title_activity_do_ticket_set_base">DoTicketSetBase</string>
    <string name="title_activity_do_ticket_set_do">DoTicketSetDo</string>
    <string name="title_activity_select_seat_type">SelectSeatType</string>
    <string name="title_activity_do_ticket_show_do">DoTicketShowDo</string>

</resources>
